# metamodule-sonus-modular

./: CMakeLists.txt  plugin-mm.json
SonusModular/: LICENSE.txt
SonusModular/src/: addiction.cpp  bymidside.cpp  campione.cpp  ctrl.cpp  deathcrush.cpp  fluidmix.cpp  fraction.cpp  luppolo3.cpp  micromacro.cpp  multimulti.cpp  neurosc.cpp  oktagon.cpp  osculum.cpp  piconoise.cpp  pith.cpp  pusher.cpp  ringo.cpp  sinosc.hpp  sonusmodular.hpp  tropadd.hpp  tropicana.cpp
metamodule-plugins/: SonusModular-v2.0.0-dev13.0.mmplugin  SonusModular.mmplugin
sonusmodular/: README.md  plugin.json
sonusmodular/src/: bitter.cpp  chainsaw.cpp  harmony.cpp  ladrone.cpp  luppolo.cpp  mrcheb.cpp  paramath.cpp  scramblase.cpp  sonusmodular.cpp  twoff.cpp  yabp.cpp
